<resources>
    <string name="app_name">Insurance Premium Calculator</string>
    <string-array name="AgeRange">
        <item>Less than 17</item>
        <item>17 - 25</item>
        <item>26 - 30</item>
        <item>31 - 40</item>
        <item>41 - 55</item>
        <item>More than 55</item>
    </string-array>
    <string name="age">Age :</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="smoker">Smoker :</string>
    <string name="selection">Yes</string>
    <string name="premium">Premium :</string>
    <string name="calc">Calculate</string>
    <string name="reset">Reset</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
