<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewAge"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <Spinner
        android:id="@+id/spinnerAge"
        style="@style/childTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:entries="@array/AgeRange"
        app:layout_constraintBottom_toBottomOf="@+id/textViewAge"
        app:layout_constraintStart_toEndOf="@+id/textViewAge"
        app:layout_constraintTop_toTopOf="@+id/textViewAge" />

    <TextView
        android:id="@+id/textViewGender"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gender"
        app:layout_constraintStart_toStartOf="@+id/textViewAge"
        app:layout_constraintTop_toBottomOf="@+id/textViewAge" />

    <RadioGroup
        android:id="@+id/radGroupGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/textViewGender"
        app:layout_constraintStart_toEndOf="@+id/textViewGender"
        app:layout_constraintTop_toTopOf="@+id/textViewGender">

        <RadioButton
            android:id="@+id/radioButtonMale"
            style="@style/childTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/radioButtonFemale"
            style="@style/childTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewSmoker"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/smoker"
        app:layout_constraintStart_toStartOf="@+id/textViewGender"
        app:layout_constraintTop_toBottomOf="@+id/textViewGender" />

    <CheckBox
        android:id="@+id/checkBoxSmoker"
        style="@style/childTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/selection"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSmoker"
        app:layout_constraintStart_toEndOf="@+id/textViewSmoker"
        app:layout_constraintTop_toTopOf="@+id/textViewSmoker" />

    <TextView
        android:id="@+id/textViewPremium"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/premium"
        app:layout_constraintStart_toStartOf="@+id/textViewSmoker"
        app:layout_constraintTop_toBottomOf="@+id/textViewSmoker" />

    <TextView
        android:id="@+id/textViewResultPremium"
        style="@style/childTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textViewPremium"
        app:layout_constraintStart_toEndOf="@+id/textViewPremium"
        app:layout_constraintTop_toTopOf="@+id/textViewPremium" />

    <Button
        android:id="@+id/buttonCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/calc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPremium" />

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/textStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="@+id/buttonCalc"
        app:layout_constraintStart_toEndOf="@+id/buttonCalc"
        app:layout_constraintTop_toTopOf="@+id/buttonCalc" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02872777" />

</androidx.constraintlayout.widget.ConstraintLayout>